--- a/libiray/Slicebox/css/demo.css
+++ b/libiray/Slicebox/css/demo.css
@@ -18,7 +18,8 @@
 }
 
 /* General Demo Style */
-/* body {
+body {
+	/* background: #e4ebe9 url(../images/fancy_deboss.png) repeat top left; */
 	color: #444;
 	font-family: "PT Sans Narrow", Arial, sans-serif;
 	font-size: 13px;
@@ -26,7 +27,7 @@
     -webkit-font-smoothing: antialiased;
     overflow-x: hidden;
     min-width: 320px;
-} */
+}
 
 a {
 	color: #000;
@@ -105,7 +106,7 @@ h1 span, h5 {
 	content: "";
 	position: absolute;
 	background-color: #ddd1b6;
-	/* box-shadow: 0 1px 0 rgba(255,255,255,0.8); */
+	box-shadow: 0 1px 0 rgba(255,255,255,0.8);
 	height: 1px;
 	width: 440px;
 	left: 50%;
@@ -158,6 +159,6 @@ p.info {
 	clear: both;
 	text-align: center;
 	width: 100%;
-	/* max-wdith: 440px; */
+	max-wdith: 440px;
 	margin: 0 auto;
 }
