--- a/libiray/Slicebox/css/slicebox.css
+++ b/libiray/Slicebox/css/slicebox.css
@@ -3,7 +3,7 @@
 	margin: 10px auto;
 	position: relative;
 	overflow: hidden;
-	width: 100%;
+	width: 88%;
 	list-style-type: none;
 	padding: 0;
 }
@@ -23,7 +23,8 @@
 }
 
 .sb-slider img {
-	max-width: 100%;
+	width: 100%;
+	height: 620px;
 	display: block;
 }
 
