--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ body{
 }
 /* ********************************************** Fon ***********************************************************/
 .fon{
-    background-blend-mode: multiply;
-    background-image: url(slide7.jpeg);
-    background-size: 100% 100%;
-    background-color: rgb(20, 50, 82);
+    /* background-blend-mode: multiply; */
+    /* background-image: url(img/slide7.jpeg); */
+    /* background-size: 100% 100%; */
+    /* background-color: rgb(20, 50, 82); */
+    background-image: linear-gradient(0.25turn, rgb(3,15,28), rgb(0, 21, 44));
     padding-bottom: 120px;
 }
 .fon1{
@@ -44,10 +45,10 @@ nav .navBox .logo{
     width: 50px;
     height: 50px;
     background-image: url(Logo.png);
-    background-size: 150% 150%;
-    background-position: -10px -10px;
+    background-size: 190% 190%;
+    background-position: -21px -19px;
     margin: 0px 10px;
-    border-radius: 40px;
+    border-radius: 20px 0px;
     color: white;
 }
 .navBox h3{
@@ -63,7 +64,7 @@ nav .navBox .logo{
 .navBox .btn1{
     background-color: rgb(0, 0, 0,0);
     color: white;
-    background: linear-gradient(#000000, #000000) padding-box,
+    background: linear-gradient(rgb(3,15,28), rgb(0, 21, 44)) padding-box,
     linear-gradient(45deg, rgb(255, 80, 243), rgb(0, 195, 255)) border-box;
     border: 1px solid transparent;
     border-radius: 10px;
@@ -83,6 +84,7 @@ nav .navBox ul li{
     padding: 15px;
     color: #d0d0d0;
     font-weight: bold;
+    cursor: pointer;
 }
 /* ********************************************** Menyu left drop ***********************************************************/
 .spanchik {
@@ -214,7 +216,7 @@ nav .navBox ul li{
 header{
     /* border: 2px solid red; */
     height: 900px;
-    background-image: url(fon.png);
+    background-image: url(img/fon.png);
     background-blend-mode: multiply;
     /* background-color: #999; */
     /* background-attachment: fixed; */
@@ -238,7 +240,7 @@ header{
     font-size: 35px;
     text-align: center;
     font-style: italic;
-    color: #999;
+    color: white;
     padding: 50px 0px;
 }
 .oNas{
@@ -254,13 +256,6 @@ header{
     justify-content: center;
     align-items: center;
 }
-/* .counter-container {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 2rem 0;
-} */
 
 .social {
     width: 350px;
@@ -311,14 +306,14 @@ header{
 }
 
 .social p{
-    color: #555;
+    color: white;
 }
 
 .social h3 {
     font-size: 2.5rem;
     font-weight: 700;
     font-family: "Nunito", sans-serif;
-    color: #999;
+    color: white;
 }
 .social h4 {
     font-weight: 700;
@@ -350,12 +345,50 @@ header{
         width: 100%;
     }
 }
-
-
+/* ********************************************** oNasSlide ***********************************************************/
+.oNasSlide{
+    /* border: 2px solid red; */
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+    flex-wrap: wrap;
+}
+.oNasSlidebox1{
+    width: 550px;
+    height: 350px;
+    /* border: 2px solid blue; */
+}
+.oNasSlidebox2{
+    text-align: center;
+    height: 350px;
+    width: 600px;
+    display: flex;
+    align-items: center;
+    /* border: 2px solid blue; */
+    color: white; 
+}
+.oNasSlidebox1 iframe{
+    width: 100%;
+    height: 100%;
+}
+@media screen and (max-width: 1200px) {
+    .oNasSlidebox1{
+        width: 100%;
+    }
+    .oNasSlidebox2{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 500px) {
+    .oNasSlidebox2 h1{
+        font-size: 25px;
+    }
+    
+}
 /* ********************************************** Content ***********************************************************/
 .images{
     height: 400px;
-    background-image: url(hhh.png);
+    background-image: url(img/hhh.png);
     margin-bottom: 50px;
 }
 .nash{
@@ -375,7 +408,7 @@ header{
 .nash h1{
     margin-top: 30px;
     margin-bottom: 50px;
-    color: rgb(200, 200, 200);
+    color: white;
     font-size: 35px;
 }
 .nashImg{
@@ -407,6 +440,10 @@ header{
     gap: 50px;
     justify-content: center;
     align-items: center;
+}
+.nashBox iframe{
+    width: 100%;
+    height: 100%;
 }
 .sb-description{
     z-index: 0;
@@ -474,11 +511,15 @@ header{
    /* ********************************************** nam doverayut ***********************************************************/
 .part{
     padding: 30px 0px;
+    text-align: center;
 }
 .part h3{
     margin: 20px 0px 100px 0px;
     text-align: center;
-    color: #888;
+    background: linear-gradient(135deg, rgb(255, 80, 243) 20%, rgb(0, 195, 255) 80%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: inline-block;
 }
 .marquee {
     margin: 0px auto;
