--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ nav {
     align-items: center;
 }
 nav .navBox{
-    /* border: 2px solid blue; */
+    /* border: 2px solid blue;  */
     padding: 10px;
     display: flex;
     align-items: center;
@@ -165,25 +165,15 @@ nav .navBox ul li{
     margin-top: 20px;
 }
 
-@media screen and (max-height: 450px) {
-    .sidenav {
-        padding-top: 15px;
-    }
 
-    .sidenav a {
-        font-size: 18px;
-    }
-}
-
-@media screen and (max-width: 1120px) {
-    nav ul {
+@media screen and (max-width: 1145px) {
+    nav .navBox ul{
         display: none;
     }
-
     .spanchik {
         display: block;
     }
-
+    
     .contact {
         gap: 50px;
     }
@@ -195,13 +185,7 @@ nav .navBox ul li{
     }
 }
 
-@media screen and (max-width: 500px) {
-    .spanchik{
-        display: block;
-    }
-    nav .navBox ul{
-        display: none;
-    }
+@media screen and (max-width: 630px) {
     .btn2{
         display: none;
     }
@@ -209,6 +193,15 @@ nav .navBox ul li{
         display: none;
     }
     
+}
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+
+    .sidenav a {
+        font-size: 18px;
+    }
 }
 
 
@@ -354,7 +347,7 @@ header{
     flex-wrap: wrap;
 }
 .oNasSlidebox1{
-    width: 550px;
+    width: 650px;
     height: 350px;
     /* border: 2px solid blue; */
 }
@@ -370,13 +363,14 @@ header{
 .oNasSlidebox1 iframe{
     width: 100%;
     height: 100%;
+    /* border: 3px solid red ; */
 }
 @media screen and (max-width: 1200px) {
     .oNasSlidebox1{
-        width: 100%;
+        /* width: 100%; */
     }
     .oNasSlidebox2{
-        width: 100%;
+        /* width: 100%; */
     }
 }
 @media screen and (max-width: 500px) {
@@ -414,7 +408,7 @@ header{
 .nashImg{
     /* border: 2px solid red; */
     width: 200px;
-    height: 250px;
+    /* height: 250px; */
 }
 .nashImg path{
     fill: white;
@@ -432,9 +426,8 @@ header{
 }
 .nashContBox .nashBox{
     /* border: 2px solid green; */
-    /* border: 2px solid green; */
     width: 800px;
-    height: 700px;
+    /* height: 700px; */
     display: flex;
     flex-wrap: wrap;
     gap: 50px;
@@ -443,7 +436,7 @@ header{
 }
 .nashBox iframe{
     width: 100%;
-    height: 100%;
+    height: 700px;
 }
 .sb-description{
     z-index: 0;
@@ -451,6 +444,10 @@ header{
 @media screen and (max-width: 1590px) {
     .nashContBox .nashBox{
         width: 100%;
+    }
+    .nashBox iframe{
+        width: 100%;
+        
     }
     
 }
@@ -471,7 +468,7 @@ header{
 .productsBox{
     border-radius: 20px;
     width: 300px;
-    height: 360px;
+    height: 450px;
     background-color: rgb(18, 29, 42);
     /* border: 2px solid red; */
 }
@@ -575,9 +572,9 @@ header{
         }
     }
     .list-inline li img{
-        width: 50%;
+        width: 200px;
     }
-
+    
     @keyframes marquee {
     0% {
     transform: translateX(0);
@@ -590,6 +587,13 @@ header{
         .list-inline {
             width: 50%;
         }
+        .list-inline li img{
+            width: 100px;
+        }
+        .list-inline {
+            width: 80%;
+        }
+
         
     }
 /* ********************************************** Form ***********************************************************/
