--- a/style.css
+++ b/style.css
@@ -9,6 +9,43 @@ body{
     height: 5000px;
     background-color: rgb(3, 15, 28);
 }
+/* ********************************************** Preloader ***********************************************************/
+.preloader{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    background-image: url(img/preloader.gif);
+    background-size: 100% 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    visibility: visible;
+    opacity: 1;
+}
+.loader h1{
+    color: white;
+    font-size: 80px;
+    letter-spacing: 30px;
+    text-transform: uppercase;
+    background: linear-gradient(135deg, rgb(255, 80, 243) 20%, rgb(0, 195, 255) 80%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: inline-block;
+    transform: scale(0);
+    animation: loder 2s 1s forwards;
+}
+.done{
+    opacity: 0;
+    visibility: hidden;
+}
+@keyframes loder{
+    0%{transform: scale(0);}
+    50%{transform: scale(1.5);}
+    100%{transform: scale(1);}
+}
+
 /* ********************************************** Fon ***********************************************************/
 .fon{
     /* background-blend-mode: multiply; */
@@ -62,7 +99,7 @@ nav .navBox .logo{
     font-weight: bold;
 }
 .navBox .btn1{
-    background-color: rgb(0, 0, 0,0);
+    /* background-color: rgb(0, 0, 0,0); */
     color: white;
     background: linear-gradient(rgb(3,15,28), rgb(0, 21, 44)) padding-box,
     linear-gradient(45deg, rgb(255, 80, 243), rgb(0, 195, 255)) border-box;
@@ -211,10 +248,45 @@ header{
     height: 900px;
     background-image: url(img/fon.png);
     background-blend-mode: multiply;
-    /* background-color: #999; */
+    background-color: #999;
     /* background-attachment: fixed; */
     background-size: 100% 100%;
     border-radius: 0px 0px 50px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    text-align: center;
+    gap: 50px;
+}
+header h1{
+    color: white;
+    font-size: 60px;
+    width: 90%;
+}
+header button{
+    cursor: pointer;
+    transition: all 2s;
+    padding: 20px;
+    color: whitesmoke;
+    font-size: 25px;
+    width: 10%;
+    border-radius: 20px;
+    background: linear-gradient(135deg, rgb(255, 80, 243) 20%, rgb(0, 195, 255) 80%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: inline-block;
+    border: 0px;
+    outline: 0px solid rgb(255, 80, 243);
+    font-weight: bold;
+}
+header button:hover{
+    outline: 2px solid rgb(0, 195, 255);
+}
+header button:active{
+    transition: all 0.1s;
+    margin-top: 20px;
 }
 @media screen and (max-width: 500px) {
     header{
@@ -380,10 +452,13 @@ header{
     
 }
 /* ********************************************** Content ***********************************************************/
-.images{
+.images-slider{
     height: 400px;
-    background-image: url(img/hhh.png);
     margin-bottom: 50px;
+}
+.images-slider iframe{
+    width: 100%;
+    height: 100%;
 }
 .nash{
     text-align: center;
@@ -596,6 +671,22 @@ header{
 
         
     }
+/* ********************************************** otziv ***********************************************************/
+.otziv{
+    margin-top: 250px;
+    /* border: 2px solid red; */
+    height: 500px;
+}
+.otziv-box{
+    /* border: 2px solid blue; */
+    height: 100%;
+    width: 70%;
+    margin: auto;
+}
+.otziv-box iframe{
+    width: 100%;
+    height: 100%;
+}
 /* ********************************************** Form ***********************************************************/
 .form {
     margin-top: 200px;
