--- a/style.css
+++ b/style.css
@@ -10,21 +10,22 @@ body{
     background-color: rgb(3, 15, 28);
 }
 /* ********************************************** Preloader ***********************************************************/
-.preloader{
+/* .preloader{
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: black;
-    background-image: url(img/preloader.gif);
-    background-size: 100% 100%;
-    display: flex;
+    background-color: black; */
+    /* background-image: url(img/preloader.gif); */
+    /* background-size: 100% 100%; */
+    /* background-repeat: no-repeat; */
+    /* display: flex;
     justify-content: center;
     align-items: center;
     z-index: 2;
     visibility: visible;
     opacity: 1;
-}
-.loader h1{
+} */
+/* .loader h1{
     color: white;
     font-size: 80px;
     letter-spacing: 30px;
@@ -34,7 +35,7 @@ body{
     -webkit-text-fill-color: transparent;
     display: inline-block;
     transform: scale(0);
-    animation: loder 2s 1s forwards;
+    animation: loder 2s 0.3s forwards;
 }
 .done{
     opacity: 0;
@@ -48,17 +49,10 @@ body{
 @media screen and (max-width:500px) {
     .loader h1{
         font-size: 40px;
-        letter-spacing: 15px;
-        text-align: center;
-    }
-}
-@media screen and (max-width:500px) {
-    .loader h1{
-        font-size: 40px;
         letter-spacing: 10px;
         text-align: center;
     }
-}
+} */
 /* ********************************************** Fon ***********************************************************/
 .fon{
     /* background-blend-mode: multiply; */
@@ -92,11 +86,11 @@ nav .navBox{
     align-items: center;
 }
 nav .navBox .logo{
-    width: 50px;
-    height: 50px;
-    background-image: url(Logo.png);
-    background-size: 190% 190%;
-    background-position: -21px -19px;
+    width: 70px;
+    height: 70px;
+    background-image: url(img/logotip.jpg);
+    background-size: 100% 100%;
+    /* background-position: ; */
     margin: 0px 10px;
     border-radius: 50px;
     color: white;
@@ -104,9 +98,16 @@ nav .navBox .logo{
 .navBox h3{
     color: white;
 }
+.stainless-steel-text {
+    font-size: 38px; /* Размер текста */
+    font-weight: bold; /* Жирный текст */
+    background: linear-gradient(90deg, #e0e0e0, #b8b8b8, #e0e0e0);
+    -webkit-background-clip: text; /* Обрезка фона для текста */
+    -webkit-text-fill-color: transparent; /* Прозрачный цвет текста */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 0 0 25px rgba(255, 255, 255, 0.6); /* Тень для текста */
+  }
 .navBox button{
     border: 0px ;
-    padding: 10px 20px;
     margin-left: 10px;
     border-radius: 8px;
     font-weight: bold;
@@ -119,12 +120,26 @@ nav .navBox .logo{
     border: 1px solid transparent;
     border-radius: 10px;
 }
+.navBox .btn1 a{
+    text-decoration: none;
+    padding: 10px 20px;
+    display: block;
+    color: white;
+    /* border: 2px solid red; */
+    border-radius: 10px;
+}
 .navBox .btn2{
     background-image: linear-gradient(to right, rgb(228 122 139), rgb(196 221 242));
 }
+.navBox .btn2 a{
+    padding: 10px 20px;
+    text-decoration: none;
+    color: black;
+    display: block;
+    border-radius: 8px;
+}
 
 nav .navBox ul{
-    /* border: 2px solid red; */
     display: flex;
     list-style: none;
     gap: 20px;
@@ -362,7 +377,6 @@ header h2{
 header button{
     cursor: pointer;
     transition: all 2s;
-    padding: 20px;
     color: whitesmoke;
     font-size: 25px;
     border-radius: 20px;
@@ -377,9 +391,15 @@ header button{
 header button:hover{
     outline: 2px solid rgb(0, 195, 255);
 }
-header button:active{
+/* header button:active{
     transition: all 0.1s;
     margin-top: 20px;
+} */
+header button a{
+    padding: 20px;
+    /* border: 2px solid red; */
+    border-radius: 20px;
+    display: block;
 }
 @media screen and (max-width: 500px) {
     header{
@@ -932,14 +952,16 @@ header button:active{
 }
 /* ********************************************** Form ***********************************************************/
 .form {
-    margin-top: 200px;
+    /* margin-top: 200px; */
     text-align: center;
     /* background-image: url(../img/formFon2.jpg);
     background-attachment: fixed;
     background-size: 100% 100%;
     background-blend-mode: soft-light;
     background-color: #999; */
-    padding-top: 20px;
+    /* padding-top: 20px; */
+    padding-top: 180px;
+    /* border: 2px solid red; */
 }
 
 .form h1 {
@@ -1083,12 +1105,15 @@ footer h3 {
     padding: 0px 30px;
 }
 
-.col-1 {}
 
 .col-2 {
     width: 600px;
     height: 500px;
     text-align: center;
+}
+.col-2 .map{
+    width: 100%;
+    height: 100%;
 }
 
 .col-2 a {
